--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>org.daniel.microflow</groupId>
   <artifactId>Microflow</artifactId>
-  <version>1.6.1</version>
+  <version>1.6.2-UNOFFICIAL</version>
 
   <name>Microflow</name>
   <url>https://github.com/ortizdaniel/microflow</url>
