--- a/pom.xml
+++ b/pom.xml
@@ -1,129 +1,130 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.daniel.microflow</groupId>
-  <artifactId>Microflow</artifactId>
-  <version>1.6.2-UNOFFICIAL</version>
+    <groupId>org.daniel.microflow</groupId>
+    <artifactId>Microflow</artifactId>
+    <version>1.6.2-UNOFFICIAL</version>
 
-  <name>Microflow</name>
-  <url>https://github.com/ortizdaniel/microflow</url>
+    <name>Microflow</name>
+    <url>https://github.com/ortizdaniel/microflow</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.5</version>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+    </dependencies>
 
-  <build>
-    <resources>
-      <resource>
-        <directory>src/main/resources</directory>
-        <excludes>
-          <exclude>**/icon/*</exclude>
-        </excludes>
-      </resource>
-    </resources>
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>**/icon/*</exclude>
+                </excludes>
+            </resource>
+        </resources>
 
-    <plugins>
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <groupId>org.apache.maven.plugins</groupId>
-        <version>3.1.1</version>
-        <executions>
-          <execution>
-            <id>make-executable-jar-with-dependencies</id>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-            <configuration>
-              <appendAssemblyId>false</appendAssemblyId>
-              <archive>
-                <manifest>
-                  <addClasspath>true</addClasspath>
-                  <mainClass>org.daniel.microflow.Microflow</mainClass>
-                </manifest>
-              </archive>
-              <descriptorRefs>
-                <descriptorRef>jar-with-dependencies</descriptorRef>
-              </descriptorRefs>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <version>3.1.1</version>
+                <executions>
+                    <execution>
+                        <id>make-executable-jar-with-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <appendAssemblyId>false</appendAssemblyId>
+                            <archive>
+                                <manifest>
+                                    <addClasspath>true</addClasspath>
+                                    <mainClass>org.daniel.microflow.Microflow</mainClass>
+                                </manifest>
+                            </archive>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
-      <plugin>
-        <groupId>com.akathist.maven.plugins.launch4j</groupId>
-        <artifactId>launch4j-maven-plugin</artifactId>
-        <version>1.7.25</version>
-        <executions>
-          <execution>
-            <id>l4j-gui</id>
-            <phase>package</phase>
-            <goals>
-              <goal>launch4j</goal>
-            </goals>
-            <configuration>
-              <headerType>gui</headerType>
-              <outfile>target/${project.artifactId}-${project.version}.exe</outfile>
-              <jar>target/${project.artifactId}-${project.version}.jar</jar>
-              <dontWrapJar>false</dontWrapJar>
-              <errTitle>Error in launch4j plugin</errTitle>
-              <classPath>
-                <mainClass>org.daniel.microflow.Microflow</mainClass>
-              </classPath>
-              <icon>src/main/resources/icon/icon.ico</icon>
-              <jre>
-                <minVersion>1.8.0</minVersion>
-                <initialHeapSize>512</initialHeapSize>
-                <maxHeapSize>1024</maxHeapSize>
-              </jre>
-              <versionInfo>
-                <fileVersion>${project.version}.0</fileVersion>
-                <txtFileVersion>${project.version}.0</txtFileVersion>
-                <companyName>Daniel Ortiz</companyName>
-                <fileDescription>Microflow application for Digital Systems and Microprocessors</fileDescription>
-                <copyright>Copyright (C) 2018-2019</copyright>
-                <productVersion>${project.version}.0</productVersion>
-                <txtProductVersion>${project.version}</txtProductVersion>
-                <productName>Microflow</productName>
-                <internalName>Microflow</internalName>
-                <originalFilename>${project.artifactId}-${project.version}.exe</originalFilename>
-              </versionInfo>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
+            <plugin>
+                <groupId>com.akathist.maven.plugins.launch4j</groupId>
+                <artifactId>launch4j-maven-plugin</artifactId>
+                <version>1.7.25</version>
+                <executions>
+                    <execution>
+                        <id>l4j-gui</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>launch4j</goal>
+                        </goals>
+                        <configuration>
+                            <headerType>gui</headerType>
+                            <outfile>target/${project.artifactId}-${project.version}.exe</outfile>
+                            <jar>target/${project.artifactId}-${project.version}.jar</jar>
+                            <dontWrapJar>false</dontWrapJar>
+                            <errTitle>Error in launch4j plugin</errTitle>
+                            <classPath>
+                                <mainClass>org.daniel.microflow.Microflow</mainClass>
+                            </classPath>
+                            <icon>src/main/resources/icon/icon.ico</icon>
+                            <jre>
+                                <minVersion>1.8.0</minVersion>
+                                <initialHeapSize>512</initialHeapSize>
+                                <maxHeapSize>1024</maxHeapSize>
+                            </jre>
+                            <versionInfo>
+                                <fileVersion>${project.version}.0</fileVersion>
+                                <txtFileVersion>${project.version}.0</txtFileVersion>
+                                <companyName>Daniel Ortiz</companyName>
+                                <fileDescription>Microflow application for Digital Systems and Microprocessors
+                                </fileDescription>
+                                <copyright>Copyright (C) 2018-2019</copyright>
+                                <productVersion>${project.version}.0</productVersion>
+                                <txtProductVersion>${project.version}</txtProductVersion>
+                                <productName>Microflow</productName>
+                                <internalName>Microflow</internalName>
+                                <originalFilename>${project.artifactId}-${project.version}.exe</originalFilename>
+                            </versionInfo>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
-      <plugin>
-        <groupId>sh.tak.appbundler</groupId>
-        <artifactId>appbundle-maven-plugin</artifactId>
-        <version>1.2.0</version>
-        <configuration>
-          <mainClass>org.daniel.microflow.Microflow</mainClass>
-          <iconFile>src/main/resources/icon/icon.icns</iconFile>
-          <generateDiskImageFile>true</generateDiskImageFile>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>bundle</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+            <plugin>
+                <groupId>sh.tak.appbundler</groupId>
+                <artifactId>appbundle-maven-plugin</artifactId>
+                <version>1.2.0</version>
+                <configuration>
+                    <mainClass>org.daniel.microflow.Microflow</mainClass>
+                    <iconFile>src/main/resources/icon/icon.icns</iconFile>
+                    <generateDiskImageFile>true</generateDiskImageFile>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>bundle</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
