--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.daniel.microflow</groupId>
@@ -93,7 +93,8 @@
                 <fileVersion>${project.version}.0</fileVersion>
                 <txtFileVersion>${project.version}.0</txtFileVersion>
                 <companyName>Daniel Ortiz</companyName>
-                <fileDescription>Microflow application for Digital Systems and Microprocessors</fileDescription>
+                <fileDescription>Microflow application for Digital Systems and Microprocessors
+                </fileDescription>
                 <copyright>Copyright (C) 2018-2019</copyright>
                 <productVersion>${project.version}.0</productVersion>
                 <txtProductVersion>${project.version}</txtProductVersion>
